--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,18 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_marginBottom="20dp"
+        android:textSize="35sp"
+        android:text="GalleryApp"
+        android:id="@+id/appTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
     <LinearLayout
+        android:padding="20dp"
+        android:layout_marginBottom="30dp"
         android:id="@+id/linearLayoutContainer"
         android:orientation="vertical"
         android:gravity="center"
@@ -31,26 +42,20 @@
             android:layout_height="wrap_content"
             android:text="Use your fingerprint to unlock" />
     </LinearLayout>
-    <Button
-        android:layout_marginTop="5dp"
-        android:id="@+id/login_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtView"
-        android:text="Login" />
+<!--    <Button-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:id="@+id/login_btn"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/txtView"-->
+<!--        android:text="Login" />-->
 
-    <Button
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:layout_below="@id/login_btn"
-        android:text="Gallery Sqlcipher" />
+<!--    <Button-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/button2"-->
+<!--        android:layout_below="@id/login_btn"-->
+<!--        android:text="Gallery Sqlcipher" />-->
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Go to 3rd activity" />
 </LinearLayout>
